# PFE_Livewire

./: .gitignore  .gitignore~  README.md  documentation_template.txt
Doc_Exemples/build-testLivewire-Desktop-Debug/: Makefile
Doc_Exemples/plivewire/: contour.cc  contour.h  displayWindow.h  glutMaster.h  glutWindow.h  image.cc  isnake.h  main.cc  mainWindow.cc  mainWindow.h  point.cc  point.h  snake.h
Doc_Exemples/testLivewire/: testLivewire.pro
Documentation/: Readme.txt
Documentation/html/: annotated.html  classContour-members.html  classContour.html  classDijkstra-members.html  classDijkstra.html  classLiveWire-members.html  classLiveWire.html  classMainWindow-members.html  classMainWindow.html  classMeshViewerWidget-members.html  (+54 more)
PFE_Livewire_rapport_/: .~lock.Mattioli-Mabily-Leria_rapport_PFE.docx#  Mattioli-Mabily-Leria_rapport_PFE.docx  Mattioli-Mabily-Leria_rapport_PFE.odt  ~$ttioli-Mabily-Leria_rapport_PFE.docx
Ressources/: documentation.doxygen
build-pfeLivewire-Desktop-Debug/: Makefile  moc_mainwindow.cpp  moc_meshviewerwidget.cpp  starterLight  ui_mainwindow.h
donneesPFE M2GIG/: maks3D_Myson_00.txt  maks3D_Myson_02.txt
gig_latex_template/: bibsample.bib  gig.cls  ifpdf.sty  modele_de_rapport_MasterGIG.tex  refig-alpha.bst
partie_pcl/: ReadMe  myInstallPCL.sh
partie_pcl/ProjetContourExtraction/: CMakeLists.txt  extractContour.cpp  extractContour.h  main.cpp  utilsPcl.cpp  utilsPcl.h
partie_pcl/anciens_et_utiles/Recalage/: CMakeLists.txt  icp.cpp  utilsPcl.cpp  utilsPcl.h
partie_pcl/anciens_et_utiles/converterXyzToPcd/: CMakeLists.txt  convertXyzToPcd.cpp
projetQt/: contour.cpp  contour.h  livewire.cpp  livewire.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshviewerwidget.h  pfeLivewire.pro  pfeLivewire.pro.user.b00425d  raycasting.cpp  raycasting.h  selectedpoinst.cpp  selectedpoints.cpp  selectedpoints.h  utils.cpp  utils.h  utilsMesh.cpp  utilsMesh.cpp.autosave  utilsMesh.h
testJojo/: contour.xyz
(+309 files in other folders)
